# ouvido

./: .gitignore  BUILD-RECORD.md  README.md  RESUME.md  pyproject.toml
data/: candidates_kept.json  missing_verdicts.json  notes_verified.json  verdicts.json
data/candidates/: chunk.json  estrutura.json  falso-amigo.json  lexico.json  marcador.json  reducao.json
data/logs/: asr_failures.jsonl  build.jsonl  rejected_candidates.jsonl  rejected_notes.jsonl  unattested.jsonl
data/notes/: batch_00.json  batch_01.json  batch_02.json  batch_03.json  batch_04.json  batch_05.json  batch_06.json  batch_07.json  batch_08.json  batch_09.json  batch_10.json  batch_11.json  batch_12.json  batch_13.json  batch_14.json  batch_15.json  batch_16.json  batch_17.json  batch_18.json
data/slices/: slice_00.json  slice_01.json  slice_02.json  slice_03.json  slice_04.json  slice_05.json  slice_06.json  slice_07.json  slice_08.json  slice_09.json  slice_10.json  slice_11.json  slice_12.json  slice_13.json  slice_14.json  slice_15.json  slice_16.json  slice_17.json  slice_18.json
data/verdicts/: mechanics_00.json  mechanics_01.json  mechanics_02.json  mechanics_03.json  mechanics_04.json  mechanics_05.json  mechanics_06.json  mechanics_07.json  mechanics_08.json  mechanics_09.json  mechanics_10.json  mechanics_11.json  mechanics_13.json  (+32 more)
scripts/: fetch_subtlex.sh
tests/: test_anki.py  test_asr.py  test_candidates.py  test_cli.py  test_cognate.py  test_corpus.py  test_gap.py  test_media.py  test_notetype.py  test_render.py  test_schema.py  test_smoke.py  test_verify.py
(+13 files in other folders)
