[project]
name = "ouvido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Musel25", email = "muselemmanuel@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.8",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
